fix: align accordion and figma design

--- a/src/features/styles/theme/accordion/styles.scss
+++ b/src/features/styles/theme/accordion/styles.scss
@@ -22,18 +22,16 @@
             block-size: 0;
         }
     }
-
-    &_item {
-        overflow: hidden;
-        box-shadow: 0px 1px 2px 0px #0e0e0e0f;
-        box-shadow: 0px 1px 3px 0px #0e0e0e1a;
-    }
     &_shadow_item {
         margin-block-end: 2rem;
+        &_trigger {
+            box-shadow: 0px 1px 2px 0px rgba(14, 14, 14, 0.06), 0px 1px 3px 0px rgba(14, 14, 14, 0.10);
+        }
     }
 
     &_content {
         padding-inline: 1rem;
+        overflow: hidden;
 
         &[data-state='open'] {
             animation: slideDown 300ms cubic-bezier(0.87, 0, 0.13, 1);
